objects/Handwrytten__hndwrtObjSettings__c.object
<CustomObject>
    <description>Object for storing Handwrytten Settings</description>
    <fields>
        <fullName>Handwrytten__Default_Account_Address_Type__c</fullName>
        <label>Default Account Address Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Set</fullName>
                    <default>true</default>
                    <label>Not Set</label>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>First Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>First Contact Other Address</fullName>
                </value>
                <value>
                    <fullName>Select Account Standard Fields</fullName>
                </value>
                <value>
                    <fullName>Select Account Related Custom Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handwrytten__Default_Business_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Default business name to account name on handwrytten notes.</inlineHelpText>
        <label>Default Business Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handwrytten__Default_Contact_Address_Type__c</fullName>
        <label>Default Contact Address Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Set</fullName>
                    <default>true</default>
                    <label>Not Set</label>
                </value>
                <value>
                    <fullName>Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Contact Other Address</fullName>
                </value>
                <value>
                    <fullName>Account Billing Address</fullName>
                </value>
                <value>
                    <fullName>Account Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Select Contact Standard Fields</fullName>
                </value>
                <value>
                    <fullName>Select Contact Related Custom Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handwrytten__Default_Opportunity_Address_Type__c</fullName>
        <label>Default Opportunity Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Set</fullName>
                    <default>true</default>
                    <label>Not Set</label>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>First Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>First Contact Other Address</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Mailing Address</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Other Address</fullName>
                </value>
                <value>
                    <fullName>Select Opportunity Standard Fields</fullName>
                </value>
                <value>
                    <fullName>Select Opportunity Related Custom Object</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Handwrytten__UserId__c</fullName>
        <externalId>true</externalId>
        <label>UserId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Handwrytten__sObject_Value__c</fullName>
        <label>sObject_Value</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Handwrytten__hndwrtObjAccount__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Handwrytten Settings</label>
    <listViews>
        <fullName>Handwrytten__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HndwrtStng-{00000000}</displayFormat>
        <label>Handwrytten Settings Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handwrytten Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>